Fix for sideways devices (main content overlapping footer)

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -17,7 +17,7 @@ main {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    height: 90vh;
+    min-height: 90vh;
     background-image: url("../images/weather-guesser-background.jpg");
     background-position: center;
     background-size: cover;
